--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -15,7 +15,9 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
-    "pino": "^9.6.0",
+    "pino": "^9.6.0"
+  },
+  "devDependencies": {
     "pino-pretty": "^13.0.0"
   }
 }
