--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -14,6 +14,7 @@
     "express": "^4.21.2",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "mongoose": "^8.10.0",
     "morgan": "~1.9.1",
     "pino": "^9.6.0"
   },
