--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -16,6 +16,7 @@
     "jade": "~1.11.0",
     "mongoose": "^8.10.0",
     "morgan": "~1.9.1",
+    "passport": "^0.7.0",
     "pino": "^9.6.0"
   },
   "devDependencies": {
