--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -12,11 +12,13 @@
     "debug": "~2.6.9",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongoose": "^8.10.0",
     "morgan": "~1.9.1",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "pino": "^9.6.0"
   },
   "devDependencies": {
